--- a/ci/config.yml
+++ b/ci/config.yml
@@ -1,14 +1,14 @@
-app-name: # ex: roster
-initials: # your initials
+app-name: roster # ex: roster
+initials: SM # your initials
 language: gradle
 
-github-app-repo-uri: # ssh url of your app fork in double quotes. ex: "git@github.com:spgreenberg/roster.git"
+github-app-repo-uri: "git@github.com:safdarmirza/roster.git"  # ssh url of your app fork in double quotes. ex: "git@github.com:spgreenberg/roster.git"
 
-github-pipelines-repo-uri: # ssh url of your training-pipelines fork in double quotes.  ex: "git@github.com:spgreenberg/training-pipelines.git"
+github-pipelines-repo-uri: "git@github.com:safdarmirza/training-pipelines.git"  # ssh url of your training-pipelines fork in double quotes.  ex: "git@github.com:spgreenberg/training-pipelines.git"
 
-cf-dev-api: # set to cf api endpoint
-cf-dev-org: # set to your org
-cf-dev-space: # set to your space
-cf-dev-hostname: # set to '<app-name>-<first_initial><lastname>'. ex: roster-sgreenberg
-cf-dev-domain: # set to the apps domain for your CF
-cf-dev-manifest: # set to the dev manifest path in your app repository. ex: dev-manifest.yml
+cf-dev-api: https://api.run.pivotal.io # set to cf api endpoint
+cf-dev-org: rscale-training-4 # set to your org
+cf-dev-space: safdar # set to your space
+cf-dev-hostname: roster-safdarmirza # set to '<app-name>-<first_initial><lastname>'. ex: roster-sgreenberg
+cf-dev-domain: # cfapps.io set to the apps domain for your CF
+cf-dev-manifest: /Users/safdar.mirza/roster_manifest.yml# set to the dev manifest path in your app repository. ex: dev-manifest.yml
